[package]
name = "isabelle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["cookies"]}
actix-session = { version = "0.7.1", features = ["cookie-session"] }
actix-identity = "0.5.2"
actix-cors = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.8.4"
